# smartmet-library-newbase

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  cloudbuild.yaml  newbase.dox  smartmet-library-newbase.spec  smartmet-library-newbase.spec.in
.circleci/: config.yml
cmake/: Linux.cmake  NewbaseConfig.cmake  Windows.cmake  cmake_uninstall.cmake.in  package.cmake
examples/: Makefile  bugtest_NFmiMetTime.cpp  example_Landscaping.cpp  example_NFmiMetMath.cpp  example_NFmiPoint.cpp  example_NFmiSettings.cpp  example_NFmiSettingsImpl.cpp  example_NFmiStringList.cpp  example_NFmiTimeZoneFinder.cpp  example_NFmiVector.cpp  odin.conf  test_NFmiTimeZoneFinder.cpp  timezones.txt  ukko.conf  windows.conf
include/: NFmiArea.h  NFmiAreaMask.h  NFmiAreaMaskImpl.h  NFmiAreaTools.h  NFmiBox.h  NFmiCalculatedAreaMask.h  NFmiCalculationCondition.h  NFmiCombinedParam.h  NFmiCommentStripper.h  NFmiDataMatrix.h  NFmiDataModifierAvg.h  NFmiDataModifierAvgAbs.h  NFmiDataModifierBoolean.h  NFmiDataModifierClipSum.h  NFmiDataModifierDescriptor.h  NFmiDataModifierExtremePlace.h  NFmiDataModifierGreaterThan.h  NFmiDataModifierMask.h  NFmiDataModifierMax.h  NFmiDataModifierMaxMean.h  NFmiDataModifierMaxPlace.h  NFmiDataModifierMinPlace.h  NFmiDataModifierSingleExtremeValuesFilter.h  NFmiDataModifierSum.h  NFmiDataModifierVariance.h  NFmiDef.h  NFmiFastQueryInfo.h  NFmiFileSystem.h  NFmiFindFile.h  NFmiGeoTools.h  NFmiGeomList.h  NFmiGlobals.h  NFmiGrid.h  NFmiGridBase.h  NFmiHPlaceDescriptor.h  NFmiIndividual.h  NFmiInfoAreaMask.h  NFmiKKJArea.h  NFmiLagrange.h  NFmiLambertEqualArea.h  (+46 more)
newbase/: NFmiAngle.cpp  NFmiAngle.h  NFmiArea.cpp  NFmiArea.h  NFmiAreaFactory.cpp  NFmiAreaFactory.h  NFmiAreaMask.cpp  NFmiAreaMask.h  NFmiAreaMaskImpl.cpp  NFmiAreaMaskImpl.h  NFmiAreaMaskList.cpp  NFmiAreaMaskList.h  NFmiAreaTools.cpp  NFmiAreaTools.h  NFmiAzimuthalArea.cpp  NFmiAzimuthalArea.h  NFmiBitMask.cpp  NFmiBitMask.h  NFmiBitmapAreaMask.cpp  NFmiBitmapAreaMask.h  NFmiBox.cpp  NFmiBox.h  NFmiCalculatedAreaMask.cpp  NFmiCalculatedAreaMask.h  NFmiCalculationCondition.cpp  NFmiCalculationCondition.h  NFmiCalculator.cpp  NFmiCalculator.h  NFmiCmdLine.cpp  NFmiCmdLine.h  NFmiCombinedParam.cpp  NFmiCombinedParam.h  NFmiCommentStripper.cpp  NFmiCommentStripper.h  NFmiDataDescriptor.cpp  NFmiDataDescriptor.h  NFmiDataIdent.cpp  NFmiDataIdent.h  NFmiDataIntegrator.cpp  NFmiDataIntegrator.h  (+309 more)
source/: NFmiArea.cpp  NFmiAreaFactory.cpp  NFmiAreaMaskImpl.cpp  NFmiAreaMaskList.cpp  NFmiAreaTools.cpp  NFmiBox.cpp  NFmiCalculationCondition.cpp  NFmiCalculator.cpp  NFmiCmdLine.cpp  NFmiCombinedParam.cpp  NFmiDataModifierAdd.cpp  NFmiDataModifierAllValidSum.cpp  NFmiDataModifierAvg.cpp  NFmiDataModifierBoolean.cpp  NFmiDataModifierClasses.cpp  NFmiDataModifierCombi.cpp  NFmiDataModifierConstant.cpp  NFmiDataModifierDummy.cpp  NFmiDataModifierExtremePlace.cpp  NFmiDataModifierGreaterThan.cpp  NFmiDataModifierLogical.cpp  NFmiDataModifierMaxMean.cpp  NFmiDataModifierMin.cpp  NFmiDataModifierMinMax.cpp  NFmiDataModifierProb.cpp  NFmiDataModifierReplace.cpp  NFmiDataPool.cpp  NFmiEditParam.cpp  NFmiEnumConverter.cpp  NFmiFastQueryInfo.cpp  NFmiFileSystem.cpp  NFmiFindFile.cpp  NFmiGrid.cpp  NFmiGridBase.cpp  NFmiHPlaceDescriptor.cpp  NFmiIndexMask.cpp  NFmiIndividual.cpp  NFmiInterpolation.cpp  NFmiKKJArea.cpp  NFmiLagrange.cpp  (+38 more)
test/: .cvsignore  Makefile  NFmiAngleTest.cpp  NFmiAreaFactoryTest.cpp  NFmiDataIntegratorTest.cpp  NFmiEnumConverterTest.cpp  NFmiFastQueryInfoTest.cpp  NFmiFileSystemTest.cpp  NFmiGdalAreaTest.cpp  NFmiGeoToolsTest.cpp  NFmiHPlaceDescriptorTest.cpp  NFmiIndexMaskSourceTest.cpp  NFmiIndexMaskTest.cpp  NFmiIndexMaskToolsTest.cpp  NFmiInterpolationTest.cpp  NFmiLocationFinderTest.cpp  NFmiMercatorAreaTest.cpp  NFmiMetMathTest.cpp  NFmiMetTimeTest.cpp  NFmiModMeanCalculatorTest.cpp  NFmiMultiQueryInfoTest.cpp  NFmiNearTreeTest.cpp  NFmiQueryDataTest.cpp  NFmiQueryInfoTest.cpp  NFmiSettingsImplTest.cpp  NFmiSettingsTest.cpp  NFmiStringListTest.cpp  NFmiStringTest.cpp  NFmiStringToolsTest.cpp  NFmiSvgPathTest.cpp  NFmiSvgToolsTest.cpp  NFmiTimeTest.cpp  NFmiTypeNameTraitsTest.cpp
test/data/: 201309110600_tutka_suomi_rr.sqd  201309110605_tutka_suomi_rr.sqd  201309110610_tutka_suomi_rr.sqd  201309110615_tutka_suomi_rr.sqd  201309111610_pal_skandinavia_maanpinta.sqd  201309120708_pal_skandinavia_maanpinta.sqd  coast_distance.mask  helsinki_distance.mask  hiladata.sqd  hiladata.sqd.bz2  name2longlat.unix  name2longlat.win  pistedata.fqd  settings.cnf  settings_newline.cnf  settings_spaces.cnf  suomi_distance.mask  suomi_expand.mask  suomi_inside.mask  suomi_outside.mask  suomi_shrink.mask  uv.sqd
